--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/curl"]
 	path = vendor/curl
 	url = https://github.com/curl/curl.git
+[submodule "vendor/jsoncons"]
+	path = vendor/jsoncons
+	url = https://github.com/danielaparker/jsoncons.git
