--- a/src/parsers/CMakeLists.txt
+++ b/src/parsers/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE jsonpointer.cpp jsonpath.cpp regex.cpp xml.cpp errors.cpp)
 
 # on linux, disable conversion errors
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+if(UNIX AND NOT APPLE)
+  set(CMAKE_COMPILE_WARNING_AS_ERROR OFF)
   target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -Wno-error -Wno-conversion -Wno-shadow -Wno-unused-parameter)
 endif()
