add inja templating

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,9 @@ endif()
 include(cmake/BuildJSONCONS.cmake)
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE jsoncons)
 
+include(cmake/BuildInja.cmake)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE inja)
+
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE vendor/nlohmann-json)
 
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.c src/url-source.cpp src/ui/RequestBuilder.cpp
