--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/jsoncons"]
 	path = vendor/jsoncons
 	url = https://github.com/danielaparker/jsoncons.git
+[submodule "vendor/inja"]
+	path = vendor/inja
+	url = https://github.com/pantor/inja
