--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,9 @@ target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE jsoncons)
 include(cmake/BuildInja.cmake)
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE inja)
 
+include(cmake/BuildLibTidy.cmake)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE libtidy)
+
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE vendor/nlohmann-json)
 
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.c src/url-source.cpp src/ui/RequestBuilder.cpp
