Add agg to empty and binary data

--- a/src/parsers/CMakeLists.txt
+++ b/src/parsers/CMakeLists.txt
@@ -1,4 +1,12 @@
-target_sources(${CMAKE_PROJECT_NAME} PRIVATE jsonpointer.cpp jsonpath.cpp regex.cpp xml.cpp errors.cpp html.cpp)
+target_sources(
+  ${CMAKE_PROJECT_NAME}
+  PRIVATE jsonpointer.cpp
+          jsonpath.cpp
+          regex.cpp
+          xml.cpp
+          errors.cpp
+          html.cpp
+          binary-data.cpp)
 
 # on linux, disable conversion errors
 if(UNIX AND NOT APPLE)
