--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,8 +70,15 @@ target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE liblexbor_internal)
 
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE vendor/nlohmann-json)
 
-target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.c src/url-source.cpp src/ui/RequestBuilder.cpp
-                                             src/request-data.cpp src/ui/text-render-helper.cpp src/url-source-info.c)
+target_sources(
+  ${CMAKE_PROJECT_NAME}
+  PRIVATE src/plugin-main.c
+          src/url-source.cpp
+          src/ui/RequestBuilder.cpp
+          src/request-data.cpp
+          src/ui/text-render-helper.cpp
+          src/url-source-info.c
+          src/obs-source-util.cpp)
 add_subdirectory(src/parsers)
 
 set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_name})
