--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ target_sources(
           src/ui/text-render-helper.cpp
           src/ui/outputmapping.cpp
           src/ui/InputsDialog.cpp
+          src/ui/InputWidget.cpp
           src/ui/obs-ui-utils.cpp
           src/url-source-callbacks.cpp
           src/url-source-info.c
