Multiple inputs option (#100)
* Add multiple inputs dialogs and widgets

* Add data for inputs

* chore: Refactor UI components and fix URL source callbacks

* Refactor UI components and add mapping data

* Refactor UI components and fix URL source callbacks

* chore: Bump version to 0.3.2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,9 @@ target_sources(
           src/ui/RequestBuilder.cpp
           src/ui/text-render-helper.cpp
           src/ui/outputmapping.cpp
+          src/ui/InputsDialog.cpp
+          src/ui/InputWidget.cpp
+          src/ui/obs-ui-utils.cpp
           src/url-source-callbacks.cpp
           src/url-source-info.c
           src/url-source-thread.cpp
